--- a/DataBindingTest/app/src/main/res/layout/activity_main.xml
+++ b/DataBindingTest/app/src/main/res/layout/activity_main.xml
@@ -2,16 +2,26 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="user" type="com.example.llchen.databindingtest.User"/>
+        <variable name="handler" type="com.example.llchen.databindingtest.Handler"/>
     </data>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/text_view_1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{user.firstName}"/>
-        <TextView android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@{user.firstName}"
+            android:textSize="40dp"/>
+        <TextView
+            android:id="@+id/text_view_2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{user.lastName}"/>
+            android:layout_gravity="center_horizontal"
+            android:text="@{user.lastName}"
+            android:textSize="40dp"
+            android:onClick="@{handler::onHandling}"/>
     </LinearLayout>
 </layout>
