--- a/DataBindingTest/app/src/main/res/layout/activity_main.xml
+++ b/DataBindingTest/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@{user.lastName}"
+            android:textSize="40dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Button"
             android:textSize="40dp"
-            android:onClick="@{handler::onHandling}"/>
+            android:onClick="@{()->handler.onHandling()}" />
     </LinearLayout>
 </layout>
